--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,9 +28,9 @@ jobs:
       - uses: aws-actions/setup-sam@v1
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:${{secrets.AWS_REGION}}
+          aws-access-key-id: AKIA4VVXTVMKIO5LYMWS
+          aws-secret-access-key: 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
+          aws-region: us-east-1
       # sam build 
       - run: sam build --use-container
 
