--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,7 +32,7 @@ jobs:
           aws-secret-access-key: xWZuN7aSVt9UiGA/FA8Tvd54marLUpPmfGMWzIw7
           aws-region: us-east-1
       # sam build 
-      - run: sam build --use-container --template template.yaml
+      - run: sam build --use-container --template=template.yaml
  
 # Run Unit tests- Specify unit tests here 
 
